// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetTableStat useGetTableStat should fill default values if data is missing 1`] = `
[
  [
    [
      {
        "dimensions": [
          "CampaignEvents.campaignId",
        ],
        "filters": [
          {
            "member": "CampaignEvents.periodStart",
            "operator": "afterDate",
            "values": [
              "2023-02-01T00:00:00.000",
            ],
          },
          {
            "member": "CampaignEvents.periodEnd",
            "operator": "beforeDate",
            "values": [
              "2023-04-01T00:00:00.000",
            ],
          },
          {
            "member": "CampaignEvents.campaignId",
            "operator": "equals",
            "values": [
              "campaign1",
              "campaign2",
            ],
          },
        ],
        "measures": [
          "CampaignEvents.impressions",
          "CampaignEvents.firstCampaignDisplay",
          "CampaignEvents.lastCampaignDisplay",
          "CampaignEvents.clicks",
          "CampaignEvents.clicksRate",
          "CampaignEvents.ticketsCreated",
        ],
        "metricName": "convert-campaign-events-performance",
        "segments": [
          "CampaignEvents.campaignEventsOnly",
        ],
        "timezone": "America/Los_Angeles",
      },
    ],
    {
      "enabled": true,
      "select": [Function],
    },
  ],
  [
    [
      {
        "dimensions": [
          "OrderConversion.campaignId",
        ],
        "filters": [
          {
            "member": "OrderConversion.periodStart",
            "operator": "afterDate",
            "values": [
              "2023-02-01T00:00:00.000",
            ],
          },
          {
            "member": "OrderConversion.periodEnd",
            "operator": "beforeDate",
            "values": [
              "2023-04-01T00:00:00.000",
            ],
          },
          {
            "member": "OrderConversion.campaignId",
            "operator": "equals",
            "values": [
              "campaign1",
              "campaign2",
            ],
          },
        ],
        "measures": [
          "OrderConversion.campaignSales",
          "OrderConversion.ticketSales",
          "OrderConversion.ticketSalesCount",
          "OrderConversion.discountSales",
          "OrderConversion.discountSalesCount",
          "OrderConversion.clickSales",
          "OrderConversion.clickSalesCount",
          "OrderConversion.campaignSalesCount",
        ],
        "metricName": "convert-campaign-order-performance",
        "timezone": "America/Los_Angeles",
      },
    ],
    {
      "enabled": true,
      "select": [Function],
    },
  ],
  [
    [
      {
        "dimensions": [
          "CampaignOrderEvents.campaignId",
        ],
        "filters": [
          {
            "member": "CampaignOrderEvents.periodStart",
            "operator": "afterDate",
            "values": [
              "2023-02-01T00:00:00.000",
            ],
          },
          {
            "member": "CampaignOrderEvents.periodEnd",
            "operator": "beforeDate",
            "values": [
              "2023-04-01T00:00:00.000",
            ],
          },
          {
            "member": "CampaignOrderEvents.campaignId",
            "operator": "equals",
            "values": [
              "campaign1",
              "campaign2",
            ],
          },
        ],
        "measures": [
          "CampaignOrderEvents.engagement",
          "CampaignOrderEvents.totalConversionRate",
          "CampaignOrderEvents.campaignCTR",
        ],
        "metricName": "convert-campaign-events-orders-performance",
        "timezone": "America/Los_Angeles",
      },
    ],
    {
      "enabled": true,
      "select": [Function],
    },
  ],
  [
    [
      {
        "dimensions": [],
        "filters": [
          {
            "member": "OrderConversion.periodStart",
            "operator": "afterDate",
            "values": [
              "2023-02-01T00:00:00.000",
            ],
          },
          {
            "member": "OrderConversion.periodEnd",
            "operator": "beforeDate",
            "values": [
              "2023-04-01T00:00:00.000",
            ],
          },
          {
            "member": "OrderConversion.shopName",
            "operator": "equals",
            "values": [
              "shopify:slow-formulas-for-sale",
            ],
          },
        ],
        "measures": [
          "OrderConversion.gmv",
        ],
        "metricName": "convert-store-revenue-total",
        "timezone": "America/Los_Angeles",
      },
    ],
    {
      "enabled": true,
      "select": [Function],
    },
  ],
]
`;

exports[`GetTableStat useGetTableStat should fill default values if data is missing 2`] = `
{
  "data": {
    "campaign1": {
      "campaignSalesCount": 0,
      "clickThroughRate": 0,
      "clicks": 24,
      "clicksConversionRate": 0,
      "clicksConverted": 0,
      "clicksRate": 10.2,
      "clicksRevenue": 0,
      "discountCodesRevenue": 0,
      "discountCodesUsed": 0,
      "engagement": 0,
      "impressions": 234,
      "ticketsConversionRate": 0,
      "ticketsConverted": 0,
      "ticketsCreated": 157,
      "ticketsCreationRate": 67.09401709401709,
      "ticketsRevenue": 0,
      "totalConversionRate": 0,
      "totalRevenue": 0,
      "totalRevenueShare": 0,
    },
    "campaign2": {
      "campaignSalesCount": 0,
      "clickThroughRate": 0,
      "clicks": 57,
      "clicksConversionRate": 0,
      "clicksConverted": 0,
      "clicksRate": 21.34,
      "clicksRevenue": 0,
      "discountCodesRevenue": 0,
      "discountCodesUsed": 0,
      "engagement": 0,
      "impressions": 567,
      "ticketsConversionRate": 0,
      "ticketsConverted": 0,
      "ticketsCreated": 357,
      "ticketsCreationRate": 62.96296296296296,
      "ticketsRevenue": 0,
      "totalConversionRate": 0,
      "totalRevenue": 0,
      "totalRevenueShare": 0,
    },
  },
  "isError": false,
  "isFetching": false,
}
`;

exports[`GetTableStat useGetTableStat should return prepared data for campaign performance table 1`] = `
[
  [
    [
      {
        "dimensions": [
          "CampaignEvents.campaignId",
        ],
        "filters": [
          {
            "member": "CampaignEvents.periodStart",
            "operator": "afterDate",
            "values": [
              "2023-02-01T00:00:00.000",
            ],
          },
          {
            "member": "CampaignEvents.periodEnd",
            "operator": "beforeDate",
            "values": [
              "2023-04-01T00:00:00.000",
            ],
          },
          {
            "member": "CampaignEvents.campaignId",
            "operator": "equals",
            "values": [
              "campaign1",
              "campaign2",
            ],
          },
        ],
        "measures": [
          "CampaignEvents.impressions",
          "CampaignEvents.firstCampaignDisplay",
          "CampaignEvents.lastCampaignDisplay",
          "CampaignEvents.clicks",
          "CampaignEvents.clicksRate",
          "CampaignEvents.ticketsCreated",
        ],
        "metricName": "convert-campaign-events-performance",
        "segments": [
          "CampaignEvents.campaignEventsOnly",
        ],
        "timezone": "America/Los_Angeles",
      },
    ],
    {
      "enabled": true,
      "select": [Function],
    },
  ],
  [
    [
      {
        "dimensions": [
          "OrderConversion.campaignId",
        ],
        "filters": [
          {
            "member": "OrderConversion.periodStart",
            "operator": "afterDate",
            "values": [
              "2023-02-01T00:00:00.000",
            ],
          },
          {
            "member": "OrderConversion.periodEnd",
            "operator": "beforeDate",
            "values": [
              "2023-04-01T00:00:00.000",
            ],
          },
          {
            "member": "OrderConversion.campaignId",
            "operator": "equals",
            "values": [
              "campaign1",
              "campaign2",
            ],
          },
        ],
        "measures": [
          "OrderConversion.campaignSales",
          "OrderConversion.ticketSales",
          "OrderConversion.ticketSalesCount",
          "OrderConversion.discountSales",
          "OrderConversion.discountSalesCount",
          "OrderConversion.clickSales",
          "OrderConversion.clickSalesCount",
          "OrderConversion.campaignSalesCount",
        ],
        "metricName": "convert-campaign-order-performance",
        "timezone": "America/Los_Angeles",
      },
    ],
    {
      "enabled": true,
      "select": [Function],
    },
  ],
  [
    [
      {
        "dimensions": [
          "CampaignOrderEvents.campaignId",
        ],
        "filters": [
          {
            "member": "CampaignOrderEvents.periodStart",
            "operator": "afterDate",
            "values": [
              "2023-02-01T00:00:00.000",
            ],
          },
          {
            "member": "CampaignOrderEvents.periodEnd",
            "operator": "beforeDate",
            "values": [
              "2023-04-01T00:00:00.000",
            ],
          },
          {
            "member": "CampaignOrderEvents.campaignId",
            "operator": "equals",
            "values": [
              "campaign1",
              "campaign2",
            ],
          },
        ],
        "measures": [
          "CampaignOrderEvents.engagement",
          "CampaignOrderEvents.totalConversionRate",
          "CampaignOrderEvents.campaignCTR",
        ],
        "metricName": "convert-campaign-events-orders-performance",
        "timezone": "America/Los_Angeles",
      },
    ],
    {
      "enabled": true,
      "select": [Function],
    },
  ],
  [
    [
      {
        "dimensions": [],
        "filters": [
          {
            "member": "OrderConversion.periodStart",
            "operator": "afterDate",
            "values": [
              "2023-02-01T00:00:00.000",
            ],
          },
          {
            "member": "OrderConversion.periodEnd",
            "operator": "beforeDate",
            "values": [
              "2023-04-01T00:00:00.000",
            ],
          },
          {
            "member": "OrderConversion.shopName",
            "operator": "equals",
            "values": [
              "shopify:slow-formulas-for-sale",
            ],
          },
        ],
        "measures": [
          "OrderConversion.gmv",
        ],
        "metricName": "convert-store-revenue-total",
        "timezone": "America/Los_Angeles",
      },
    ],
    {
      "enabled": true,
      "select": [Function],
    },
  ],
]
`;

exports[`GetTableStat useGetTableStat should return prepared data for campaign performance table 2`] = `
{
  "data": {
    "campaign1": {
      "campaignSalesCount": 125,
      "clickThroughRate": 12.78,
      "clicks": 24,
      "clicksConversionRate": 487.5,
      "clicksConverted": 117,
      "clicksRate": 10.2,
      "clicksRevenue": 3596.25,
      "discountCodesRevenue": 4567.65,
      "discountCodesUsed": 125,
      "engagement": 514,
      "impressions": 234,
      "ticketsConversionRate": 49.681528662420384,
      "ticketsConverted": 78,
      "ticketsCreated": 157,
      "ticketsCreationRate": 67.09401709401709,
      "ticketsRevenue": 1234.47,
      "totalConversionRate": 7.49,
      "totalRevenue": 12345.67,
      "totalRevenueShare": 0,
    },
    "campaign2": {
      "campaignSalesCount": 358,
      "clickThroughRate": 11.25,
      "clicks": 57,
      "clicksConversionRate": 435.08771929824564,
      "clicksConverted": 248,
      "clicksRate": 21.34,
      "clicksRevenue": 3596.25,
      "discountCodesRevenue": 4567.65,
      "discountCodesUsed": 125,
      "engagement": 1714,
      "impressions": 567,
      "ticketsConversionRate": 21.84873949579832,
      "ticketsConverted": 78,
      "ticketsCreated": 357,
      "ticketsCreationRate": 62.96296296296296,
      "ticketsRevenue": 1234.47,
      "totalConversionRate": 9.87,
      "totalRevenue": 12345.67,
      "totalRevenueShare": 0,
    },
  },
  "isError": false,
  "isFetching": false,
}
`;
